[package]
name = "pv1_dfu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
color-eyre = "0.6.3"
fastanvil = "0.31.0"
fastnbt = "2.5.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.132"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
